# pyvista-imgui

./: .gitignore  LICENSE  PyVista.ini  README.md  pyproject.toml  setup.py
.github/workflows/: python-package-build-and-publish.yaml
example/: example_embedded.py  example_standalone.py  example_standalone_thread.py
pyvista_imgui/: __init__.py  _backend_imgui_bundle.py  _backend_pyimgui.py  imgui_render_window.py  interactor_style_pivot.py  plotting.py  texture_render_window.py
